--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -1,16 +1,3 @@
-/* Card Based Layout - Base styles */
-
-body {
-	background: hsl(0, 0%, 90%);
-}
-
-.masthead {
-	background: hsl(0, 0%, 20%);`
-}
-
-.site-title {
-	color: white;
-}
 
 .card {
 	background: white;
@@ -20,6 +7,7 @@ body {
 .card a {
 	color: black;
 	text-decoration: none;
+	display: inline-block;
 }
 
 .card a:hover {
@@ -28,6 +16,7 @@ body {
 
 .card-content {
 	padding: 1.4em;
+	width: auto;
 }
 
 .card-content h2 {
@@ -38,4 +27,16 @@ body {
 
 .card-content p {
 	font-size: 95%;
+}
+
+/*cards styles*/
+.cards {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.card {
+	flex: 0 1 calc(33% - 1em);
+	/* width: calc(33% -1em); */
 }
