--- a/css/card-styles.css
+++ b/css/card-styles.css
@@ -7,7 +7,6 @@
 .card a {
 	color: black;
 	text-decoration: none;
-	display: inline-block;
 }
 
 .card a:hover {
@@ -30,13 +29,32 @@
 }
 
 /*cards styles*/
-.cards {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
+
+@media screen and (min-width: 40em) {
+	.cards {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		margin-top: 1em;
+	}
+	
+	.card {
+		flex: 0 1 calc(50% - .5em);
+		margin-bottom: 1em;
+		display: flex;
+		/* width: calc(33% -1em); */
+	}
 }
 
-.card {
-	flex: 0 1 calc(33% - 1em);
-	/* width: calc(33% -1em); */
+@media screen and (min-width: 60em) {
+	.cards {
+		margin-top: inherit;
+	}
+	.card {
+		flex: 0 1 calc(33% - 1em);
+		/* width: calc(33% -1em); */
+		margin-bottom: 2em;
+	}
 }
+
+
