--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 @import url('css/advanced-menu.css'); 
 @import url('css/multilevel.css');
 @import url('css/reset.css');
+@import url('css/accessibility.css');
 @import url('css/typography.css');
 @import url('css/card-styles.css');
 @import url('css/holy-grail.css');
